// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="expenses-summary"
>
  <h2>
    Viewing 
    0
     
    expenses
     totalling 
    $0.00
  </h2>
</div>
`;

exports[`should render ExpensesSummary expenses totals 1`] = `
<div
  className="expenses-summary"
>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h2>
</div>
`;
